--- a/src/app/sections/landing-pages/subscription-page/subscription-page.component.scss
+++ b/src/app/sections/landing-pages/subscription-page/subscription-page.component.scss
@@ -84,6 +84,7 @@
 
 .banner-container {
   height: 65px;
+  overflow: hidden;
 }
 
 .left-active,
